--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 db.sqlite3
 project/blog/settings.py
 project/static/admin/
-/media/
+media/
 *.pyc
-/__pycache__/
-/migrations/
+__pycache__/
+migrations/
